--- a/build.gradle
+++ b/build.gradle
@@ -5,6 +5,7 @@ buildscript {
         kotlin_version = '1.3.11'
         nav_version = "1.0.0-alpha09"
         room_version = '1.1.1'
+        retrofit_version = '2.4.0'
     }
 
     repositories {
