--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,7 +43,9 @@ dependencies {
     implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
     implementation "com.squareup.retrofit2:converter-gson:$retrofit_version"
     implementation 'com.google.code.gson:gson:2.8.5'
+    implementation "android.arch.lifecycle:extensions:$lifecycle_version"
     kapt "android.arch.persistence.room:compiler:$room_version"
+    kapt "android.arch.lifecycle:compiler:$lifecycle_version"
     testImplementation 'junit:junit:4.12'
     androidTestImplementation "android.arch.persistence.room:testing:$room_version"
     androidTestImplementation 'androidx.test:runner:1.1.1'
