--- a/build.gradle
+++ b/build.gradle
@@ -6,6 +6,7 @@ buildscript {
         nav_version = "1.0.0-alpha09"
         room_version = '1.1.1'
         retrofit_version = '2.4.0'
+        lifecycle_version = '1.1.1'
     }
 
     repositories {
