--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,6 +44,7 @@ dependencies {
     implementation "com.squareup.retrofit2:converter-gson:$retrofit_version"
     implementation 'com.google.code.gson:gson:2.8.5'
     implementation "android.arch.lifecycle:extensions:$lifecycle_version"
+    implementation "com.squareup.picasso:picasso:$picasso_version"
     kapt "android.arch.persistence.room:compiler:$room_version"
     kapt "android.arch.lifecycle:compiler:$lifecycle_version"
     testImplementation 'junit:junit:4.12'
