--- a/build.gradle
+++ b/build.gradle
@@ -7,6 +7,7 @@ buildscript {
         room_version = '1.1.1'
         retrofit_version = '2.4.0'
         lifecycle_version = '1.1.1'
+        picasso_version = '2.71828'
     }
 
     repositories {
