--- a/build.gradle
+++ b/build.gradle
@@ -8,6 +8,7 @@ buildscript {
         retrofit_version = '2.4.0'
         lifecycle_version = '1.1.1'
         picasso_version = '2.71828'
+        koin_version = '1.0.2'
     }
 
     repositories {
