--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,6 +50,7 @@ dependencies {
     kapt "android.arch.persistence.room:compiler:$room_version"
     kapt "android.arch.lifecycle:compiler:$lifecycle_version"
     testImplementation 'junit:junit:4.12'
+    testImplementation 'org.koin:koin-test:1.0.1'
     androidTestImplementation "android.arch.persistence.room:testing:$room_version"
     androidTestImplementation 'androidx.test:runner:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
