--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,6 +47,7 @@ dependencies {
     implementation "com.squareup.picasso:picasso:$picasso_version"
     implementation "org.koin:koin-androidx-scope:$koin_version"
     implementation "org.koin:koin-androidx-viewmodel:$koin_version"
+    implementation "androidx.paging:paging-runtime-ktx:$paging_version"
     kapt "android.arch.persistence.room:compiler:$room_version"
     kapt "android.arch.lifecycle:compiler:$lifecycle_version"
     testImplementation 'junit:junit:4.12'
@@ -54,4 +55,5 @@ dependencies {
     androidTestImplementation "android.arch.persistence.room:testing:$room_version"
     androidTestImplementation 'androidx.test:runner:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.1'
+    androidTestImplementation "android.arch.core:core-testing:$lifecycle_version"
 }
