--- a/build.gradle
+++ b/build.gradle
@@ -3,12 +3,14 @@
 buildscript {
     ext {
         kotlin_version = '1.3.11'
-        nav_version = "1.0.0-alpha09"
+        nav_version = "1.0.0-alpha11"
         room_version = '1.1.1'
         retrofit_version = '2.4.0'
         lifecycle_version = '1.1.1'
         picasso_version = '2.71828'
         koin_version = '1.0.2'
+        lifecycle_version = "1.1.1"
+        paging_version = "2.1.0"
     }
 
     repositories {
@@ -16,7 +18,7 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.2.1'
+        classpath 'com.android.tools.build:gradle:3.3.0'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
 
         // NOTE: Do not place your application dependencies here; they belong
