--- a/build.gradle
+++ b/build.gradle
@@ -2,8 +2,8 @@
 
 buildscript {
     ext {
-        kotlin_version = '1.3.11'
-        nav_version = "1.0.0-alpha11"
+        kotlin_version = '1.3.21'
+        nav_version = "1.0.0"
         room_version = '1.1.1'
         retrofit_version = '2.4.0'
         lifecycle_version = '1.1.1'
@@ -11,6 +11,7 @@ buildscript {
         koin_version = '1.0.2'
         lifecycle_version = "1.1.1"
         paging_version = "2.1.0"
+        navigationVersion = "2.0.0"
     }
 
     repositories {
@@ -20,6 +21,7 @@ buildscript {
     dependencies {
         classpath 'com.android.tools.build:gradle:3.3.0'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$navigationVersion"
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
